erDiagram
    userentity {
        int id PK
        varchar username
        varchar role
        int point
        double latitude
        double longitude
    }

    %% ── 재료 마스터 ──────────────────────────────
    unit {
        bigint id PK
        varchar name
        varchar kind
    }
    ingredient_master {
        bigint id PK
        varchar nameKo
        varchar category
        bigint default_unit_id FK
    }

    %% ── 레시피 ───────────────────────────────────
    recipe {
        bigint recipeId PK
        int user_id FK
        varchar title
        varchar category
        boolean isDraft
        int viewCount
        int likes
    }
    recipe_ingredient {
        bigint id PK
        bigint recipe_id FK
        bigint ingredient_id FK
        double quantity
    }
    like_recipe {
        bigint id PK
        int user_id FK
        bigint recipe_id FK
    }
    recommend_recipe {
        bigint id PK
        int user_id FK
        bigint recipe_id FK
    }
    review {
        bigint reviewId PK
        bigint recipe_id FK
        int user_id FK
        int rating
        varchar content
    }

    %% ── 팬트리 (현행 식재료 관리) ────────────────
    pantry {
        bigint id PK
        int user_id FK
        varchar name
        boolean isDefault
        int sortOrder
    }
    pantry_stock {
        bigint id PK
        bigint pantry_id FK
        bigint ingredient_id FK
        bigint unit_id FK
        decimal quantity
        varchar storage
        date expiresAt
    }
    pantry_history {
        bigint id PK
        bigint pantry_id FK
        bigint ingredient_id FK
        bigint unit_id FK
        bigint stock_id FK
        decimal changeQty
        varchar action
        varchar refType
        bigint refId
    }

    %% ── 동네주방 거래 ────────────────────────────
    trade_post {
        bigint tradePostId PK
        int user_id FK
        int buyer_id FK
        varchar title
        varchar status
        int price
        double latitude
        double longitude
    }
    saved_trade_post {
        bigint id PK
        int user_id FK
        bigint trade_post_id FK
    }
    tp_review {
        bigint tpReviewId PK
        bigint trade_post_id FK
        int user_id FK
        int rating
    }
    chat_rooms {
        bigint id PK
        varchar roomKey
        bigint post_id FK
        int user_a_id FK
        int user_b_id FK
    }

    %% ── 게시판 ───────────────────────────────────
    board {
        bigint id PK
        int writer_id FK
        varchar content
        varchar boardType
    }
    board_comment {
        bigint id PK
        int user_id FK
        bigint board_id FK
        varchar content
    }
    board_like {
        bigint id PK
        int user_id FK
        bigint board_id FK
    }

    %% ── 숏폼 ─────────────────────────────────────
    shorts_video {
        bigint id PK
        int user_id FK
        varchar title
        int viewCount
    }
    short_comment {
        bigint id PK
        int user_id FK
        bigint shorts_video_id FK
        varchar content
    }

    %% ── 사용자 부가 ──────────────────────────────
    user_follow {
        bigint id PK
        int follower_id FK
        int following_id FK
    }
    point_history {
        bigint id PK
        int user_id FK
        int pointChange
        varchar action
    }
    notification_entity {
        bigint id PK
        int user_id FK
        varchar category
        boolean read
    }
    device_token {
        bigint id PK
        int user_id FK
        varchar fcmToken
        varchar platform
    }

    %% ── 관계 정의 ────────────────────────────────
    ingredient_master }o--|| unit : "기본 단위"

    userentity ||--o{ recipe : "작성"
    userentity ||--o{ pantry : "보유"
    userentity ||--o{ trade_post : "판매"
    userentity ||--o{ board : "작성"
    userentity ||--o{ shorts_video : "업로드"
    userentity ||--o{ like_recipe : "좋아요"
    userentity ||--o{ recommend_recipe : "추천"
    userentity ||--o{ review : "작성"
    userentity ||--o{ tp_review : "작성"
    userentity ||--o{ saved_trade_post : "찜"
    userentity ||--o{ user_follow : "팔로워"
    userentity ||--o{ notification_entity : "수신"
    userentity ||--o{ device_token : "등록"
    userentity ||--o{ point_history : "이력"
    userentity ||--o{ board_comment : "작성"
    userentity ||--o{ board_like : "좋아요"
    userentity ||--o{ short_comment : "작성"
    userentity ||--o{ chat_rooms : "참여(A)"
    userentity ||--o{ chat_rooms : "참여(B)"

    recipe ||--o{ recipe_ingredient : "포함"
    recipe ||--o{ like_recipe : "받음"
    recipe ||--o{ recommend_recipe : "받음"
    recipe ||--o{ review : "받음"
    ingredient_master ||--o{ recipe_ingredient : "사용됨"

    pantry ||--o{ pantry_stock : "보유"
    pantry ||--o{ pantry_history : "기록"
    pantry_stock }o--|| unit : "단위"
    pantry_stock ||--o{ pantry_history : "참조"
    pantry_history }o--|| unit : "단위"
    ingredient_master ||--o{ pantry_stock : "저장됨"
    ingredient_master ||--o{ pantry_history : "기록됨"

    trade_post ||--o{ chat_rooms : "채팅방"
    trade_post ||--o{ saved_trade_post : "찜됨"
    trade_post ||--o{ tp_review : "받음"

    board ||--o{ board_comment : "포함"
    board ||--o{ board_like : "받음"

    shorts_video ||--o{ short_comment : "포함"
